@@ -11,8 +11,10 @@ import net.minecraft.server.level.ServerEntity;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.phys.Vec3;
 import rbasamoyai.createbigcannons.base.PreciseProjectile;
+import rbasamoyai.createbigcannons.cannon_control.contraption.PitchOrientedContraptionEntity;
 import rbasamoyai.createbigcannons.multiloader.NetworkPlatform;
 import rbasamoyai.createbigcannons.network.ClientboundPreciseMotionSyncPacket;
+import rbasamoyai.createbigcannons.network.ClientboundPreciseRotationSyncPacket;
 
 @Mixin(ServerEntity.class)
 public class ServerEntityMixin {
@@ -25,6 +27,10 @@ public class ServerEntityMixin {
 			Vec3 pos = this.entity.position();
 			Vec3 vel = this.entity.getDeltaMovement();
 			NetworkPlatform.sendToClientTracking(new ClientboundPreciseMotionSyncPacket(this.entity.getId(), pos.x, pos.y, pos.z, vel.x, vel.y, vel.z, this.entity.getYRot(), this.entity.getXRot(), this.entity.isOnGround()), this.entity);
+			this.entity.hasImpulse = false;
+		} else if (this.entity instanceof PitchOrientedContraptionEntity) {
+			Vec3 pos = this.entity.position();
+			NetworkPlatform.sendToClientTracking(new ClientboundPreciseRotationSyncPacket(this.entity.getId(), this.entity.getYRot(), this.entity.getXRot()), this.entity);
 			this.entity.hasImpulse = false;
 		}
 	}
